# aenv

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
plugin/: plugin.json
plugin/commands/: doctor.md  exec.md  list.md  reload.md  rollback.md  status.md  use.md
src/: cli.rs  error.rs  main.rs  mcp_import.rs  paths.rs  resolve.rs
src/audit/: mod.rs
src/backend/: common.rs  mod.rs
src/backend/claude/: installed_plugins.rs  known_marketplaces.rs  mod.rs  shim.rs
src/backend/codex/: mcp_render.rs  mod.rs  shim.rs
src/commands/: add.rs  audit_cmd.rs  current.rs  doctor.rs  exec.rs  export_profile.rs  history.rs  import_global.rs  import_profile.rs  init.rs  install.rs  list.rs  lock_cmd.rs  mod.rs  new_env.rs  prune.rs  remove.rs  rm.rs  rollback.rs  run_cmd.rs  secrets_cmd.rs  shell_cmd.rs  status.rs  sync_cmd.rs  upgrade.rs  use_cmd.rs  which.rs
src/commands/ifl/: mod.rs  tui.rs
src/env/: manifest.rs  mod.rs
src/install/: mod.rs
src/secrets/: mod.rs
src/shell/: bash.rs  fish.rs  mod.rs  zsh.rs
src/skills/: mod.rs
src/store/: mod.rs  source.rs
src/tx/: mod.rs
tests/: cli.rs
tests/common/: mod.rs
