[package]
name = "aenv"
version = "0.3.0"
edition = "2021"
rust-version = "1.88"
description = "Per-environment isolation for AI coding CLIs (Claude Code, Codex, ...) — plugins, skills, MCPs, secrets"
authors = ["Junyong Min"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/wnsdy95/aenv"
homepage = "https://github.com/wnsdy95/aenv"
documentation = "https://github.com/wnsdy95/aenv/blob/main/README.md"
readme = "README.md"
keywords = ["claude", "codex", "venv", "environment", "cli"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    ".github/**",
    "tests/**",
    "plugin/**",
    "aenv/**",
    "PLAN.md",
    "*.tar.gz",
]

[[bin]]
name = "aenv"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
thiserror = "2.0"
anyhow = "1.0"
dirs = "6.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10"
hex = "0.4"
fs_extra = "1.3"
walkdir = "2.5"
# Cross-platform sha invariant: macOS HFS+/APFS stores filenames in NFD
# while Linux/Windows treat them as opaque bytes. Without normalization,
# the same logical filename ("한글.md") hashes to different shas on
# different OSes. We NFC-normalize every relative path before sorting +
# hashing so the digest depends on logical filename, not filesystem
# encoding. unicode-rs is the canonical Rust implementation.
unicode-normalization = "0.1"
once_cell = "1.20"
tempfile = "3.14"
chrono = { version = "0.4", features = ["serde"] }
semver = { version = "1.0", features = ["serde"] }
keyring = { version = "3.6", features = ["apple-native", "linux-native", "windows-native"] }
fs2 = "0.4"
tar = "0.4"
flate2 = "1.0"
ureq = { version = "2.10", features = ["tls"] }
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
crossterm = "0.28"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tar = "0.4"
flate2 = "1.0"
walkdir = "2.5"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
